adds two seperate style sheets.
adds text and image to the top of the main frame.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Egzaminas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleHeader.css">
+    <link rel="stylesheet" href="styleMain.css">
 </head>
 
 <body>
@@ -25,7 +26,26 @@
             </div>
         </nav> 
     </header>
-    <main>
+    <main>   
+        <div class="flex-container">
+            <div class="mainText">
+                <div style="color: #FF3998;">
+                    LAUNCHING SOON
+                </div>
+                <div>
+                    <h1> An NFT like no other</h1>
+                </div>
+                <div style="font-size:20px;">
+                    Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.
+                </div>
+            </div>
+            <div class="mainGraphicImage">
+                <img src="./assets/graphic.svg" style="width: 300px;"/>
+            </div>
+        </div>
+        <button class="signUpButton">
+            Sign Up
+        </button>
     </main>
     <footer>
 
